@@ -10,6 +10,7 @@ java-common (0.15) unstable; urgency=low
     a dummy package, closes: #159483. Thanks to
     "Grzegorz Prokopski (Debian Developer)" <gadek@debian.org>.
   * Fixed typo, closes: #160735.
+  * Updated debian-java-faq.
 
  -- Ola Lundqvist <opal@debian.org>  Wed, 25 Sep 2002 07:41:45 +0200
 
